CANVAS-VISUALIZATION: multi-tab graph rendering is working fine.. svg expanded to 1500*800 so overflow scroll has been set.. sidebar and bottom bar are now showing correctly since CSS grid has been fixed from auto to repeat(auto-fit, minmax(100px, 1fr)); which is solving width auto resizing to happen when bar comes and goes away.. TODO: D3 chartgenerater needs ot be cleaned up and refined with testing

--- a/src/styles/app/_app-header.scss
+++ b/src/styles/app/_app-header.scss
@@ -3,7 +3,7 @@
   line-height: 25px;
   align-content: center;
   width: 100%;
-  background-color: indigo;
+  background-color: #002d64;
   color: white;
 
   display: flex;
